<resources>
    <string name="app_name">Undistract</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_profile">Create Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="icon">Icon:</string>
    <string name="select_apps_to_block">Select Apps to Block (%1$d)</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="select_an_icon">Select an Icon</string>
    <string name="accessibility_service_description">Undistract uses this service to prevent access to apps when they are blocked.</string>
</resources>