...
                        painter = painterResource(id = R.drawable.baseline_add_24),
                        contentDescription = null,
                        modifier = Modifier.size(24.dp)
                    )
                    Spacer(modifier = Modifier.width(8.dp))
                    Text(
                        text = "Add New Profile",
                        style = MaterialTheme.typography.bodyLarge
                    )
                }
            }

            Text(
                text = "Long press on a profile to edit or delete it.",
                fontSize = 10.sp,
                color = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.6f),
                textAlign = TextAlign.Center,
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(bottom = 8.dp) // Adds bottom spacing between the helper text and the container's edge to improve visual separation and readability
...
